--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@tailwindcss/cli": "^4.1.18",
     "clsx": "^2.1.1",
     "dotenv": "^17.2.3",
+    "express": "^5.2.1",
     "framer-motion": "^12.26.2",
     "lucide-react": "^0.562.0",
     "mongodb": "^7.0.0",
